--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
+
     compileSdkVersion 22
     buildToolsVersion "22.0.1"
 
@@ -10,6 +11,10 @@ android {
         targetSdkVersion 21
         versionCode 11
         versionName "1.1"
+    }
+
+    repositories {
+        maven { url "https://jitpack.io" }
     }
 
     buildTypes {
@@ -36,8 +41,10 @@ dependencies {
     compile "com.android.support:support-v4:22.2.0"
     compile 'com.google.android.gms:play-services-wearable:7.5.0'
 
-    compile 'com.jakewharton:butterknife:6.1.0'
+    compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.squareup:otto:1.3.6'
-    compile 'com.beardedhen:androidbootstrap:1.2.1'
     compile 'com.j256.ormlite:ormlite-android:4.46'
+
+    compile 'com.beardedhen:androidbootstrap:1.2.1'
+    compile 'com.github.PhilJay:MPAndroidChart:v2.1.3'
 }
